tests/errors/kind_star_of_int.f90
program kind_star_of_int
    implicit none
    integer(*) a
end program
